# skrybaCLI

./: .gitignore  CMakeLists.txt  README.md  skrybaCLI_project.odt
src/: button.cpp  button.hpp  decorations.cpp  decorations.hpp  definitions.cpp  definitions.hpp  inputLabel.cpp  inputLabel.hpp  interfaceElement.hpp  jira.txt  main.cpp  purchase.cpp  purchase.hpp
src/screens/: history.cpp  history.hpp  main_menu.cpp  main_menu.hpp  new_month_creator.cpp  new_month_creator.hpp  new_month_intro.cpp  new_month_intro.hpp  purchases_list_edit.cpp  purchases_list_edit.hpp  save_list.cpp  save_list.hpp  screen.hpp  screen_main_menu.cpp  screen_main_menu.hpp
